--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,15 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<version>5.3.1</version>
+		<version>5.3.2</version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.kevoree</groupId>
+			<artifactId>kevoree-model-generator</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.kevoree</groupId>
 			<artifactId>org.kevoree.api</artifactId>
